syntax = "proto3";

package helloworld;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply);
}

message User {
  string name = 1;
  int32 age = 2;
  repeated string children = 3;
}

message HelloRequest {
  repeated User users = 1;
}

message HelloReply {
  repeated User users = 1;
}
